# pep10term

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  build-linux-rel.sh  build-linux.sh  gitlab-ci.yml
.devcontainer/: Dockerfile  devcontainer.json
dependencies/: CMakeLists.txt
dependencies/catch/: CMakeLists.txt
dependencies/cli11/: CMakeLists.txt
src/: CMakeLists.txt  about.txt  assemble.cpp  assemble.hpp  formatter.hpp  gen.py  main.cpp  run.cpp  run.hpp  strings.hpp  term_main.cpp  term_version.hpp.in  utils.cpp  utils.hpp  version.hpp.in
test/: CMakeLists.txt  dummy.cpp
